--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.20.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
 build==1.2.2.post1
@@ -19,6 +20,7 @@ fastapi==0.115.5
 fastapi-cli==0.0.7
 fastjsonschema==2.21.1
 filelock==3.16.1
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpie==3.2.4
@@ -62,6 +64,7 @@ rich-toolkit==0.12.0
 SecretStorage==3.3.3
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 starlette==0.41.3
 tomli==2.2.1
 tomlkit==0.13.2
